set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
if(${OPENSSL_FOUND})
add_executable(FTIutil FTI_List.c tool_api.c $<TARGET_OBJECTS:iniparser> ${OPENSSL_LIBRARIES})
target_link_libraries(FTIutil "${OPENSSL_LIBRARIES}")
else()
add_executable(FTIutil FTI_List.c tool_api.c $<TARGET_OBJECTS:iniparser> $<TARGET_OBJECTS:md5>)
target_link_libraries(FTIutil "${OPENSSL_LIBRARIES}")
endif()
