find_package(Doxygen)
if(DOXYGEN_FOUND)

set(DOXYGEN_INPUT "INPUT = ${CMAKE_SOURCE_DIR}/README.md ${CMAKE_SOURCE_DIR}/include/ ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/IO ${CMAKE_SOURCE_DIR}/src/util ${CMAKE_CURRENT_SOURCE_DIR}/cmake.md ${CMAKE_CURRENT_SOURCE_DIR}/config.md ${CMAKE_CURRENT_SOURCE_DIR}/make.md")

if(ENABLE_FORTRAN)
	set(DOXYGEN_INPUT 
		"${DOXYGEN_INPUT} ${CMAKE_CURRENT_SOURCE_DIR}/ftiff.md ${CMAKE_BINARY_DIR}/interface.F90")
endif(ENABLE_FORTRAN)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)


if(ENABLE_FORTRAN)
	add_custom_target(doc ALL
	COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS bpp_file 
	COMMENT "Generating API documentation with Doxygen" VERBATIM)
else()
	add_custom_target(doc ALL
	COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
	COMMENT "Generating API documentation with Doxygen" VERBATIM)
endif(ENABLE_FORTRAN)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} DESTINATION ${CMAKE_INSTALL_DOCDIR}
				PATTERN "CMakeFiles" EXCLUDE
				PATTERN "Doxyfile" EXCLUDE
				PATTERN "cmake_install.cmake" EXCLUDE
				PATTERN "Makefile" EXCLUDE)

endif(DOXYGEN_FOUND)
